--- a/index.html
+++ b/index.html
@@ -32,19 +32,21 @@
 
 					<div class="features">
 						<div >
-							<p>This is a multi-robot indoor delivery system, which aim to make simple discussion with human by understanding voice command, then make food delivery to people inside a specific building</p>
+							<p>This is a multi-robot indoor delivery system. It will understand the command from human voice using Alexa framework, 
+								then make food delivery to people inside a specific building. This robotic system exists to solve the problem of the need to traverse through
+								complicated office setting. Originally we were exploring the problem of last mile food delivery in office then we generalized this problem to all deliveries within office / indoor settings.</p>
 						</div>
 
 						<div class="feature">
 							<i class="fa fa-copy"></i>
 							<h3>Problems to Solve</h3>
-							<p></p>
+							<p>Time Consuming Indoor / Office Delivery</p>
 						</div>
 						
 						<div class="feature">
 							<i class="fa fa-diamond"></i>
 							<h3>Objectives</h3>
-							<p></p>
+							<p>Simplify the delivery process, allowing the courier to drop off their goods on the robot and then give robot voice command to complete the last mile delivery for them</p>
 						</div>
 				</div>
 
