--- a/index.html
+++ b/index.html
@@ -73,7 +73,7 @@
 						<div class="container">
 							<h3><b>Problems that were solved, pivots that had to be taken</b></h3>
 							<p>
-								For the frontend which is implemented using Alexa, it will  be trigger by "Hi Bot". Then the system will try to listen voice, try to understand it and make corresponding behaviour based on it.
+								The frontend part is implemented using Alexa, it will  be trigger by "Hi Bot". Then the system will try to listen voice, try to understand it and make corresponding behaviour based on it.
 								Since this is a delivery bot system. it expect to receive recipient information. Once enough information got collected, then the code delpoyed on lambda will talk with backend to check whether 
 								recipient name is legal since if no nobody work inside the building with specified name. robot will have no idea where to deliver.
 							</p>
@@ -110,13 +110,25 @@
 						<div class="feature">
 							<i class="fa fa-paper-plane"></i>
 							<h3>How it unfolded, how the team worked together</h3>
-							<p></p>
+							<p>
+								Try to balance the work load and assign task based on interests and skills.
+								Yifei works more on backend part and Daniel works more on frontend part
+							</p>
+							<p>
+								update task weekly and meet to discuss progress every week to makre sure there is no blocker and teammates are on the same page
+							</p>
 						</div>
 						
 						<div class="feature">
 							<i class="fa fa-save"></i>
 							<h3>Reflection on the project and working as a team</h3>
-							<p></p>
+							<p>
+								Working very efficiently as team and we can try to add more functionality to the robots such as actively taking to human rather than just answer questions.
+								
+							</p>
+							<p>
+								We can also try to redesign the robot to make it looks fancier
+							</p>
 						</div>
 
 					</div>
